--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <td id="layout-content">
     <div id="toptitle">
       <h1 style="color: #527bbd;">Nitish Yadav 
-        <!--<a href="https://drishticps.iiti.ac.in/" style="color: #527bbd;">(CHANAKYA Fellow, DRISHTI CPS Foundation, IIT Indore)</a>-->
       </h1>
     </div>
     <table class="imgtable">
@@ -42,7 +41,8 @@
               <b style="white-space: nowrap;">Address: </b>
               <span>Lab- 6021, Disruptive Technologies Lab, Dept. of CSIS, BITS Pilani, Pilani Campus, Rajasthan, 333031</span>
             </div>-->
-            <b>Email:</b> cs23d011@smail.iitm.ac.in, cs23d011@cse.iitm.ac.in <br/>
+            <b>Email 1:</b> cs23d011@smail.iitm.ac.in <br/>
+            <b>Email 2:</b> cs23d011@cse.iitm.ac.in
             <p style="margin-top: 0.5vw;">
               <a href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en">Google Scholar</a>, 
               <a href="https://orcid.org/0009-0008-9802-3417">ORCID</a>, 
