--- a/publication.html
+++ b/publication.html
@@ -11,9 +11,9 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
   <td id="layout-menu"  style="vertical-align: top; height: 100vh; background-color: #f6f6f6; ">   
-    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+    <div class="menu-item"><a href="index.html" >Home</a></div>
     <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-    <div class="menu-item"><a href="publication.html">Publications</a></div>
+    <div class="menu-item"><a href="publication.html" class="current">Publications</a></div>
     <!--<div class="menu-item"><a href="research-projects.html">Fellowships/Projects</a></div>-->
     <!--<div class="menu-item"><a href="awards.html">Awards</a></div>-->
     <!--<div class="menu-item"><a href="professional-activities.html">Professional Activities</a></div>-->
