--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <h2 style="margin-top: 0.5vw;">Biography</h2>
     <p style="text-align: justify;">
-    I am a doctoral researcher at the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras (IIT-M)</a>, advised by <a href="https://kartiknagar.github.io/">Dr. Kartik Nagar</a> and <a href="https://kcsrk.info/">Dr. K. C. Sivaramakrishnan</a>. I’m affiliated with the <a href="https://pace.cse.iitm.ac.in/">Programming Languages, Architecture and Compilers Education (PACE) group</a>  in the <a href="https://www.cse.iitm.ac.in/">Department of Computer Science & Engineering</a>, and I joined the program in January 2023.    </p>
+    <strong>Nitish Yadav</strong> is a Ph.D. candidate in the <a href="https://www.cse.iitm.ac.in/">Department of Computer Science and Engineering</a> at the <a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras (IIT Madras)</a>. He is advised by <a href="https://kartiknagar.github.io/">Dr. Kartik Nagar</a> and <a href="https://kcsrk.info/">Dr. K. C. Sivaramakrishnan</a>, and is affiliated with the <a href="https://pace.cse.iitm.ac.in/">Programming Languages, Architecture and Compilers Education (PACE) group</a>. He joined the doctoral program in January 2023.</p>
   </td>
 </tr>
 </table>
