--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en">Google Scholar</a>, 
               <a href="https://orcid.org/0009-0008-9802-3417">ORCID</a>, 
               <a href="https://www.linkedin.com/in/nitishyadavny">Linkedin</a>, 
-              <a href="https://github.com/ExodusNY">Github</a>
+              <a href="https://github.com/yadavnitishYN">Github</a>
             </p>
           </p>
         </td>
