--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <header class="nav" role="banner">
     <div class="nav-inner container">
       <div class="name">
-        <img src="home-button.png" alt="Profile photo of Nitish Yadav" />
+        <!--<img src="home-button.png" alt="Profile photo of Nitish Yadav" />-->
         <span><a href="index.html" style="color:inherit;text-decoration:none"><strong>Nitish Yadav</strong></a></span>
       </div>
 
