--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <!-- High quality: eager load + high fetch priority + optional high-DPI srcset -->
               <img
                 src="IMG_0625.jpeg"
-                srcset="IMG_0625.jpeg 1x, IMG_0625@2x.jpeg 2x"
+                srcset="IMG_0625.jpeg 1x, IMG_0625.jpeg 2x"
                 alt="Portrait of Nitish Yadav"
                 loading="eager"
                 fetchpriority="high"
